--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -109,6 +109,10 @@ li {
             border-radius: 18px;
             cursor: pointer;
             outline: none;
+
+            &:active {
+                transform: translateY(-5px);
+            }
         }
     }
 }
@@ -292,7 +296,7 @@ li {
     border: 2px solid lightgray;
     border-radius: 8px;
     background: rgb(252, 255, 251);
-    padding: 1rem 3rem;
+    padding: 1rem 5rem;
 
     @media (min-width: 576px) {
         max-height: 65vh;
@@ -310,19 +314,23 @@ li {
         border: 1px solid gray;
         cursor: pointer;
         border-radius: 8px;
-        position: relative;
+        display: flex;
+        justify-content: space-between;
 
-        &:hover .room-item__name {
-            opacity: .2;
+        &__name {
+            flex: 5;
+
+            &:hover {
+                opacity: .2;
+            }
         }
 
         &__icon {
-            position: absolute;
-            right: 5px;
-            top: 25%;
+            flex: 1;
+            color: var(--color-gray-dark-3);
 
             &:hover {
-                color: red;
+                color: tomato;
             }
         }
 
