--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -1,368 +1,383 @@
 :root {
-	--color-white: #fff;
+    --color-white: #fff;
 
-	--color-gray-light-1: rgb(253, 253, 253);
-	--color-gray-light-2: rgb(247, 247, 247);
-	--color-gray-light-3: rgb(221, 221, 221);
-	--color-gray-dark-1: rgb(184, 184, 184);
-	--color-gray-dark-2: rgb(133, 133, 133);
-	--color-gray-dark-3: rgb(97, 97, 97);
-	--color-black: rgb(17, 16, 14);
+    --color-gray-light-1: rgb(253, 253, 253);
+    --color-gray-light-2: rgb(247, 247, 247);
+    --color-gray-light-3: rgb(221, 221, 221);
+    --color-gray-dark-1: rgb(184, 184, 184);
+    --color-gray-dark-2: rgb(133, 133, 133);
+    --color-gray-dark-3: rgb(97, 97, 97);
+    --color-black: rgb(17, 16, 14);
 
-	--bg-light-green: url("../images/intersection.png");
-	// --bg-light-green: #ffffff;
-	// --bg-green: rgb(175, 205, 245);
-	--bg-green: #777;
-	--bg-dark-green: rgb(15, 87, 48);
+    --bg-light-green: rgb(21, 36, 36);
+    // --bg-light-green: #ffffff;
+    // --bg-green: rgb(175, 205, 245);
+    --bg-green: #4e773f;
+    --bg-dark-green: rgb(95, 206, 147);
 }
 
 *,
 *::before,
 *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
 }
 
 body {
-	box-sizing: border-box;
-	text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	/* ? */
-	-webkit-overflow-scrolling: touch;
-	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-		"Lucida Sans", Arial, sans-serif;
+    box-sizing: border-box;
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    /* ? */
+    -webkit-overflow-scrolling: touch;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
 }
 
 html {
-	font-weight: 300;
-	font-family: Helvetica, sans-serif;
+    font-weight: 300;
+    font-family: Helvetica, sans-serif;
 
-	@media (min-width: 768px) {
-		font-size: 110%;
-	}
+    @media (min-width: 768px) {
+        font-size: 110%;
+    }
 
-	@media (min-width: 1200px) {
-		font-size: 130%;
-	}
+    @media (min-width: 1200px) {
+        font-size: 130%;
+    }
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 li {
-	list-style: none;
+    list-style: none;
 }
 
 .error-text {
-	color: red;
+    color: red;
 }
 
-@media (min-width: 576px) {
-}
+@media (min-width: 576px) {}
 
-@media (min-width: 768px) {
-}
+@media (min-width: 768px) {}
 
-@media (min-width: 992px) {
-}
+@media (min-width: 992px) {}
 
-@media (min-width: 1200px) {
-}
+@media (min-width: 1200px) {}
 
 /* Top */
 .top {
-	height: 100vh;
-	background: var(--bg-light-green);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    height: 100vh;
+    background: var(--bg-light-green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-	&-form {
-		background: var(--bg-green);
-		border-radius: 8px;
-		border: 3px solid lightgray;
-		padding: 3rem;
+    &-form {
+        background: var(--bg-green);
+        border-radius: 8px;
+        border: 3px solid lightgray;
+        padding: 3rem;
 
-		input {
-			font-size: 1.6rem;
-			width: 100%;
-			padding: 0.5rem;
-			border: none;
-			border-radius: 8px;
-			outline: none;
-		}
+        input {
+            font-size: 1.6rem;
+            width: 100%;
+            padding: 0.5rem;
+            border: none;
+            border-radius: 8px;
+            outline: none;
+        }
 
-		label {
-			margin: 1rem 0 0.5rem;
-			display: block;
-		}
+        label {
+            margin: 1rem 0 0.5rem;
+            display: block;
+        }
 
-		select {
-			width: 100%;
-			font-size: 1.6rem;
-			margin-bottom: 2rem;
-			padding: 0.3rem;
-			border: none;
-		}
+        select {
+            width: 100%;
+            font-size: 1.6rem;
+            margin-bottom: 2rem;
+            padding: 0.3rem;
+            border: none;
+        }
 
-		.button {
-			font-size: 1.6rem;
-			width: 100%;
-			padding: 0.3rem;
-			border: none;
-			border-radius: 18px;
-			cursor: pointer;
-			outline: none;
+        .button {
+            font-size: 1.6rem;
+            width: 100%;
+            padding: 0.3rem;
+            border: none;
+            border-radius: 18px;
+            cursor: pointer;
+            outline: none;
 
-			&:active {
-				transform: translateY(-5px);
-			}
-		}
-	}
+            &:active {
+                transform: translateY(-5px);
+            }
+        }
+    }
 }
 
 /* Chat */
 .container {
-	height: 100vh;
-	width: 100vw;
-	background: var(--bg-light-green);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background: var(--bg-light-green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-	.chat {
-		background: var(--bg-green);
-		width: 85%;
-		height: 90%;
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		border-radius: 8px;
-		padding-top: 2rem;
-		border: 2px solid lightgray;
 
-		@media (min-width: 576px) {
-			width: 80%;
-		}
 
-		@media (min-width: 768px) {
-			width: 75%;
-		}
+    .chat {
+        background: var(--bg-green);
+        width: 85%;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 8px;
+        padding-top: 2rem;
+        border: 2px solid var(--color-black);
 
-		@media (min-width: 992px) {
-			width: 70%;
-		}
 
-		@media (min-width: 1200px) {
-			width: 65%;
-		}
+        @media (min-width: 576px) {
+            width: 80%;
+        }
 
-		&-form {
-			padding: 1rem 0;
-			width: 100%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
+        @media (min-width: 768px) {
+            width: 75%;
+        }
 
-			@media (min-width: 576px) {
-				padding: 1.5rem 0;
-			}
-		}
+        @media (min-width: 992px) {
+            width: 70%;
+        }
 
-		&-input-wrapper {
-			position: relative;
-			width: 70%;
+        @media (min-width: 1200px) {
+            width: 65%;
+        }
 
-			.icon-camera {
-				position: absolute;
-				right: 1rem;
-				bottom: 18%;
-				font-size: 2rem;
-				cursor: pointer;
-				color: rgb(138, 209, 168);
+        &-form {
+            padding: 1rem 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-				&:hover {
-					color: lightgray;
-				}
+            @media (min-width: 576px) {
+                padding: 1.5rem 0;
+            }
+        }
 
-				&:active {
-					transform: translateY(-5px);
-				}
-			}
-		}
+        &-input-wrapper {
+            position: relative;
+            width: 70%;
 
-		&-input {
-			font-size: 1.7rem;
-			width: 100%;
-			border-radius: 8px;
-			border: none;
-			padding: 0.5rem 1.5rem;
-			outline: none;
-			border: 2px solid lightgray;
-			user-select: none;
-		}
 
-		&-button {
-			background: var(--color-white);
-			font-size: 1.6rem;
-			padding: 0.8rem 1rem;
-			border-radius: 50%;
-			border: 2px solid var(--color-white);
-			outline: none;
-			margin-left: 0.5rem;
-			cursor: pointer;
-			border: 3px solid lightgray;
+            .icon-camera {
+                position: absolute;
+                right: 1rem;
+                bottom: 18%;
+                font-size: 2rem;
+                cursor: pointer;
+                color: var(--color-gray-dark-2);
 
-			&:hover .icon-menu {
-				color: lightgray;
-			}
+                &:hover {
+                    color: lightgray;
+                }
 
-			@media (min-width: 1200px) {
-				padding: 1rem 2rem;
-				font-size: 2rem;
-			}
+                &:active {
+                    transform: translateY(-5px);
+                }
+            }
+        }
 
-			.icon-menu {
-				color: var(--color-gray-dark-2);
-				user-select: none;
-			}
-		}
-	}
+        &-input {
+            font-size: 1.7rem;
+            width: 100%;
+            border-radius: 8px;
+            border: none;
+            padding: .5rem 1.5rem;
+            outline: none;
+            border: 2px solid var(--color-black);
+            user-select: none;
+        }
+
+        &-button {
+            background: var(--color-white);
+            font-size: 1.6rem;
+            padding: 0.8rem 1rem;
+            border-radius: 50%;
+            border: 2px solid var(--color-white);
+            outline: none;
+            margin-left: 0.5rem;
+            cursor: pointer;
+            border: 3px solid var(--color-black);
+
+
+            &:hover .icon-menu {
+                color: lightgray;
+            }
+
+            @media (min-width: 1200px) {
+                padding: 1rem 2rem;
+                font-size: 2rem;
+            }
+
+            .icon-menu {
+                color: var(--color-gray-dark-2);
+                user-select: none;
+            }
+        }
+    }
 }
 
 .chat-list-wrapper {
-	width: 80%;
-	min-height: 60vh;
-	max-height: 60vh;
-	overflow-y: scroll;
-	scroll-behavior: smooth;
-	border: 2px solid lightgray;
-	border-radius: 8px;
-	background: rgb(252, 255, 251);
-	position: relative;
+    width: 80%;
+    min-height: 60vh;
+    max-height: 60vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    border: 2px solid lightgray;
+    border-radius: 8px;
+    background: rgb(252, 255, 251);
+    position: relative;
 
-	@media (min-width: 576px) {
-		max-height: 65vh;
-		min-height: 65vh;
-	}
+    @media (min-width: 576px) {
+        max-height: 65vh;
+        min-height: 65vh;
+    }
 
-	.room-list-roomname {
-		position: absolute;
-		top: 1rem;
-		right: 1rem;
-		z-index: 3;
-		color: rgb(138, 209, 168);
-		font-style: italic;
-		border: 1px solid rgb(138, 209, 168);
-		padding: 0.2rem 0.5rem;
-		border-radius: 8px;
-	}
+    .room-list-roomname {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        z-index: 3;
+        color: green;
+        font-style: italic;
+        border: 1px solid green;
+        padding: .2rem .5rem;
+        border-radius: 8px;
+    }
 
-	.chat-list {
-		padding: 2rem;
-	}
 
-	.chat-item {
-		margin-bottom: 1.5rem;
-		padding-bottom: 0.5rem;
-		border-bottom: 1px solid lightgray;
+    .chat-list {
+        padding: 2rem;
+    }
 
-		&__info {
-			display: flex;
-			align-items: center;
+    .chat-item {
+        margin-bottom: 1.5rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 1px solid lightgray;
 
-			&__name {
-				font-size: 1.6rem;
-				font-family: "Courier New", Courier, monospace;
-			}
+        &__info {
+            display: flex;
+            align-items: center;
 
-			&__time {
-				margin-left: 0.5rem;
-				font-size: 1rem;
-			}
-		}
+            &__name {
+                font-size: 1.6rem;
+                font-family: "Courier New", Courier, monospace;
+            }
 
-		&__content {
-			font-size: 1.4rem;
-			padding-left: 1rem;
-		}
-	}
+            &__time {
+                margin-left: 0.5rem;
+                font-size: 1rem;
+            }
+        }
+
+        &__content {
+            font-size: 1.4rem;
+            padding-left: 1rem;
+        }
+    }
 }
 
 .menu {
-	width: 80%;
-	min-height: 60vh;
-	max-height: 60vh;
-	overflow-y: scroll;
-	scroll-behavior: smooth;
-	border: 2px solid lightgray;
-	border-radius: 8px;
-	background: rgb(252, 255, 251);
-	padding: 1rem;
+    width: 80%;
+    min-height: 60vh;
+    max-height: 60vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    border: 2px solid lightgray;
+    border-radius: 8px;
+    background: rgb(252, 255, 251);
+    padding: 1rem;
 
-	@media (min-width: 576px) {
-		max-height: 65vh;
-		min-height: 65vh;
-		padding: 2rem 3rem;
-	}
+    @media (min-width: 576px) {
+        max-height: 65vh;
+        min-height: 65vh;
+        padding: 2rem 3rem;
+    }
 
-	@media (min-width: 992px) {
-		padding: 2rem 7rem;
-	}
+    @media (min-width: 992px) {
+        padding: 2rem 7rem;
+    }
 
-	&-title {
-		text-align: center;
-		margin-bottom: 1rem;
-	}
+    &-title {
+        text-align: center;
+        margin-bottom: 1rem;
+    }
 
-	.room-item {
-		font-size: 1.6rem;
-		padding: 0.5rem 2rem;
-		border: 3px solid lightgray;
-		cursor: pointer;
-		border-radius: 8px;
-		display: flex;
-		justify-content: space-between;
-		margin-bottom: 0.5rem;
+    .room-item {
+        font-size: 1.6rem;
+        padding: .5rem 2rem;
+        border: 1px solid gray;
+        cursor: pointer;
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: .5rem;
 
-		&__name {
-			flex: 5;
+        &__name {
+            flex: 5;
 
-			&:hover {
-				opacity: 0.2;
-			}
-		}
+            &:hover {
+                opacity: .2;
+            }
+        }
 
-		&__icon {
-			flex: 1;
-			color: var(--color-gray-dark-3);
+        &__icon {
+            flex: 1;
+            color: var(--color-gray-dark-3);
 
-			&:hover {
-				color: tomato;
-			}
-		}
-	}
+            &:hover {
+                color: tomato;
+            }
+        }
+
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 // transition
 
 .item-enter {
-	opacity: 0.2;
+    opacity: 0.2;
 }
 
 .item-enter-active {
-	opacity: 1;
-	transform: translateY(5px);
-	transition: all 0.8s;
+    opacity: 1;
+    transform: translateY(5px);
+    transition: all 0.8s;
 }
 
 .item-exit {
-	opacity: 1;
+    opacity: 1;
 }
 
 .item-exit-active {
-	opacity: 0;
-	transition: opacity 1s ease-in;
+    opacity: 0;
+    transition: opacity 1s ease-in;
 }
